K8s/mysql-deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: mysql

spec:
  replicas: 1

  selector:
    matchLabels:
      app: mysql

  template:
    metadata:
      labels:
        app: mysql

    spec:
      containers:
      - name: mysql

        image: mysql:8.0

        ports:
        - containerPort: 3306

        resources:
          requests:
            memory: "256Mi"
            cpu: "250m"

          limits:
            memory: "512Mi"
            cpu: "1000m"

        volumeMounts:
        - name: mysql-storage
          mountPath: /var/lib/mysql

        - name: initdb
          mountPath: /docker-entrypoint-initdb.d
       
      volumes:

      - name: mysql-storage
        persistentVolumeClaim:
          claimName: mysql-pvc

      - name: initdb
        configMap:
          name: mysql-initdb-config
