K8s/backend-nodeport.yaml
apiVersion: v1
kind: Service

metadata:
  name: backend-nodeport

spec:
  type: NodePort

  selector:
    app: backend

  ports:
  - port: 5000
    targetPort: 5000
    nodePort: 30000
