K8s/bank-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: bank-ingress

spec:
  ingressClassName: nginx

  rules:
  - host: bank.local

    http:

      paths:

      - path: /

        pathType: Prefix

        backend:

          service:
            name: frontend

            port:
              number: 5173

      - path: /api

        pathType: Prefix

        backend:

          service:
            name: backend

            port:
              number: 5000
